--- a/go/bitlife.html
+++ b/go/bitlife.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html class="no-js" lang="zxx">
-
+ 
 <head>
 
     <meta name="robots" content="noindex, follow" />
@@ -134,7 +134,7 @@
 
     <div class="row">
       <div class="col-md-10">
-  <iframe class="gm-iframe" id="gm-area" src="https://bonbang.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
+  <iframe class="gm-iframe" id="gm-area" src="https://sudoku-online.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
    <div style="padding-top: 10px;" class="container" align="Center"> 
       <button  class="btn theme-btn-1 btn-effect-1 text-uppercase" onclick="openFullscreen();">FullScreen</button>
 
@@ -209,7 +209,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/12-minibattles.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/12-minibattles.png">
+                            <img src="https://sudoku-online.github.io/img/12-minibattles.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -224,7 +224,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/volley-random.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/volley-random.png">
+                            <img src="https://sudoku-online.github.io/img/volley-random.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -239,7 +239,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/bob-the-robber-4.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/bob-the-robber-4.png">
+                            <img src="https://sudoku-online.github.io/img/bob-the-robber-4.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -254,7 +254,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/football-masters.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/football-masters.png">
+                            <img src="https://sudoku-online.github.io/img/football-masters.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -269,7 +269,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/short-ride.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/short-ride.png">
+                            <img src="https://sudoku-online.github.io/img/short-ride.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -284,7 +284,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/moto-x3m-spooky-land.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/moto-x3m-spooky-land.png">
+                            <img src="https://sudoku-online.github.io/img/moto-x3m-spooky-land.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -299,7 +299,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/top-speed-3d.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/top-speed-3d.png">
+                            <img src="https://sudoku-online.github.io/img/top-speed-3d.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -314,7 +314,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/rocket-soccer-derby.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/rocket-soccer-derby.png">
+                            <img src="https://sudoku-online.github.io/img/rocket-soccer-derby.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -329,7 +329,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/master-chess.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/master-chess.png">
+                            <img src="https://sudoku-online.github.io/img/master-chess.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -344,7 +344,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/bitlife.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/bitlife.png">
+                            <img src="https://sudoku-online.github.io/img/bitlife.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -359,7 +359,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/bullet-force.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/bullet-force.png">
+                            <img src="https://sudoku-online.github.io/img/bullet-force.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -374,7 +374,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/wrassling.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/wrassling.png">
+                            <img src="https://sudoku-online.github.io/img/wrassling.png">
                             <div class="product-badge">       
                             </div>
                         </div>
